[build-system]
requires = [
    "setuptools>=59.5",
    "wheel",
    "scikit-build",
    "cmake>=3.17",
    "pybind11[global]>=2.6",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Build for all Python versions between 3.6 and 3.13
build = "cp36-* cp37-* cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit builds
skip = "*-win32 *-musllinux* *_i686 *_ppc64le *_s390x *_armv7l"

# Specify only the desired architectures for each platform
# archs.manylinux = "x86_64 aarch64"
# archs.macos = "universal2"  # To build Universal 2 for both x86_64 and arm64 on macOS

# Set parallel build environment variable
environment = "CMAKE_BUILD_PARALLEL_LEVEL=4"

# Install the required dependencies for testing
test-requires = "pytest"

# Run the package tests using `pytest`
# test-command = "pytest {project}" # TODO